--- a/angular.json
+++ b/angular.json
@@ -15,7 +15,7 @@
           "options": {
             "outputPath": "dist/tour-presentation",
             "index": "src/index.html",
-            "baseHref": "https://giovannijvieira.github.io/tour-guiado/",
+                "baseHref": "/tour-guiado/",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
