--- a/angular.json
+++ b/angular.json
@@ -13,9 +13,9 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/tour-presentation",
+            "outputPath": "docs",
             "index": "src/index.html",
-                "baseHref": "/tour-guiado/",
+            "baseHref": "/tour-guiado/",
             "browser": "src/main.ts",
             "polyfills": [
               "zone.js"
